iniciando o cadastro de pacientes

--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,8 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=admin
-DB_DATABASE=hemose
+DB_PASSWORD=@cont!149.
+DB_DATABASE=hemose_db
 
 # JWT Configuration
 JWT_SECRET=your-secret-key
