--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nestjs/testing": "^11.1.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.9.0",
+    "frontend": "file:",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
