--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "start:backend": "npm --prefix backend start",
     "build": "npm run build --workspaces",
     "test": "npm run test --workspaces"
+  },
+  "dependencies": {
+    "hemose-project": "file:"
   }
 }
