--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.9.0",
     "frontend": "file:",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "typeorm": "^0.3.23"
   },
   "devDependencies": {
