módulo de enfermagem

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=@cont!149.
+DB_PASSWORD=1234
 DB_DATABASE=hemose_db
 
 # JWT Configuration
